tests/derive_ui/value_parser_unsupported.rs
use clap::Parser;

#[derive(Parser, Debug)]
struct Cli {
    foo: Custom,
}

#[derive(Clone, Debug)]
struct Custom;

fn main() {
    Cli::parse();
}
